# handai_refactored

./: .env.example  .gitignore  ARCHITECTURE.md  BLOG.md  CLAUDE.md  HANDOFF.md  PROCESS_DOCUMENTS_PLAN.md  README.md  UNIFIED_PIPELINE_PLAN.md  analytics_plan.md  dev.db  next.config.ts  package-lock.json  package.json  vitest.config.ts
.github/workflows/: deploy.yml
desktop/: README.md
desktop/electron/: main.js  package.json  preload.js
desktop/tauri/: package.json
desktop/tauri/src-tauri/: Cargo.toml  tauri.conf.json
desktop/tauri/src-tauri/capabilities/: default.json
desktop/tauri/src-tauri/src/: main.rs
desktop/tauri/src-tauri/web-dist/: index.html
prisma/: dev.db  schema.prisma
scripts/: build-static.sh
src/app/: globals.css  layout.tsx  page.tsx
src/app/abstract-screener/: ScreenerAnalyticsDialog.tsx  page.tsx
src/app/ai-agents/: page.tsx
src/app/ai-coder/: AnalyticsDialog.tsx  ReviewPanel.tsx  page.tsx
src/app/automator/: page.tsx
src/app/codebook-generator/: page.tsx
src/app/consensus-coder/: page.tsx
src/app/extract-data/: page.tsx
src/app/generate/: page.tsx
src/components/: AppSidebar.tsx  SettingsSheet.tsx
src/hooks/: useAIInstructions.ts  useBatchProcessor.ts  useColumnSelection.ts  useFilesRef.ts  usePersistedPrompt.ts  useSessionState.ts
src/lib/: analytics.ts  chunk-text.ts  db-indexeddb.ts  db-tauri.ts  document-browser.ts  export.ts  hooks.ts  llm-browser.ts  llm-dispatch.ts  parse-file.ts  processing-store.ts  prompts.ts  retry.ts  ris-parser.ts  sample-data.ts  store.ts  validation.ts
src/types/: index.ts
(+41 files in other folders)
