[package]
name = "handai"
version = "0.1.0"
description = "Handai AI Data Suite"
authors = []
license = "MIT"
edition = "2021"
rust-version = "1.77"

# Application binary
[[bin]]
name = "handai"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri           = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"          # spawn + sidecar support
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto           = true
opt-level     = "s"   # optimise for size
panic         = "abort"
strip         = true
